[gd_scene load_steps=44 format=3 uid="uid://bc58het8axtq8"]

[ext_resource type="Script" uid="uid://dm8nnohx7d5bb" path="res://Enemigos/Enemigo_Lunechon/enemigo_lunechon.gd" id="1_sku32"]
[ext_resource type="Texture2D" uid="uid://jgf1kgbvtcd6" path="res://Recursos/Particulas/25.png" id="2_usiae"]
[ext_resource type="Texture2D" uid="uid://ct6vi2pxrbvn4" path="res://Recursos/Enemigos/Lunechon/Lunechon_Arriba.png" id="3_usiae"]
[ext_resource type="Script" uid="uid://chaic8ncr4g01" path="res://Enemigos/Enemigo_Lunechon/Control/Estados/idle.gd" id="4_hvnms"]
[ext_resource type="Texture2D" uid="uid://ci3j3lhknec1i" path="res://Recursos/Enemigos/Lunechon/Lunechon_Abajo.png" id="4_j558x"]
[ext_resource type="Script" uid="uid://bn8l0lgm75w5m" path="res://Enemigos/Enemigo_Lunechon/Control/Estados/walk.gd" id="5_tnmmy"]
[ext_resource type="PackedScene" uid="uid://d3fxokq75pqtm" path="res://Protagonista/Control_Protagonista/state_machine.tscn" id="7_ikxw4"]
[ext_resource type="Script" uid="uid://da8j76mehbsxl" path="res://Enemigos/Enemigo_Lunechon/Control/enemigo_lunechon_base_state.gd" id="7_j558x"]
[ext_resource type="Script" uid="uid://dv3jesmc8qmx6" path="res://Enemigos/Enemigo_Lunechon/Control/Estados/damage.gd" id="7_lkxyf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p4kmm"]
radius = 15.0
height = 62.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_usiae"]
radius = 15.0
height = 62.0

[sub_resource type="AtlasTexture" id="AtlasTexture_j558x"]
atlas = ExtResource("2_usiae")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hiny"]
atlas = ExtResource("2_usiae")
region = Rect2(64, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mi3v"]
atlas = ExtResource("2_usiae")
region = Rect2(128, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4yip"]
atlas = ExtResource("2_usiae")
region = Rect2(192, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dm3vq"]
atlas = ExtResource("2_usiae")
region = Rect2(256, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lec1l"]
atlas = ExtResource("2_usiae")
region = Rect2(320, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl66w"]
atlas = ExtResource("2_usiae")
region = Rect2(384, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4ec8"]
atlas = ExtResource("2_usiae")
region = Rect2(448, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4hwd"]
atlas = ExtResource("2_usiae")
region = Rect2(512, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkvj6"]
atlas = ExtResource("2_usiae")
region = Rect2(576, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_68wqb"]
atlas = ExtResource("2_usiae")
region = Rect2(640, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecvsf"]
atlas = ExtResource("2_usiae")
region = Rect2(704, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_456mk"]
atlas = ExtResource("2_usiae")
region = Rect2(768, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qp7g2"]
atlas = ExtResource("2_usiae")
region = Rect2(832, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_48cqv"]
atlas = ExtResource("3_usiae")
region = Rect2(0, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_uaelp"]
atlas = ExtResource("3_usiae")
region = Rect2(37, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_yif2i"]
atlas = ExtResource("3_usiae")
region = Rect2(74, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_tf3dv"]
atlas = ExtResource("3_usiae")
region = Rect2(0, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4a4w"]
atlas = ExtResource("3_usiae")
region = Rect2(37, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocilv"]
atlas = ExtResource("3_usiae")
region = Rect2(74, 0, 37, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_76546"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j558x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hiny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mi3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4yip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dm3vq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lec1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl66w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4ec8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4hwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkvj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68wqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecvsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_456mk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qp7g2")
}],
"loop": false,
"name": &"Explosion",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_48cqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uaelp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yif2i")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tf3dv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4a4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocilv")
}],
"loop": true,
"name": &"Run",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_6ue35"]
atlas = ExtResource("4_j558x")
region = Rect2(0, 0, 37, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrstk"]
atlas = ExtResource("4_j558x")
region = Rect2(37, 0, 37, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vxxu"]
atlas = ExtResource("4_j558x")
region = Rect2(74, 0, 37, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qpo6"]
atlas = ExtResource("4_j558x")
region = Rect2(0, 0, 37, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbwod"]
atlas = ExtResource("4_j558x")
region = Rect2(37, 0, 37, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ietx"]
atlas = ExtResource("4_j558x")
region = Rect2(74, 0, 37, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_wjbk8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ue35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrstk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vxxu")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qpo6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbwod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ietx")
}],
"loop": true,
"name": &"Run",
"speed": 6.0
}]

[sub_resource type="Animation" id="Animation_j558x"]
resource_name = "Death"
length = 0.5
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animations/AnimatedNodeUp:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Animations/AnimatedNodeUp:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.57079, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Animations/AnimatedNodeDown:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.104917),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("State_Machine/Damage")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.49),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_cristal"
}]
}

[sub_resource type="Animation" id="Animation_0gmt2"]
resource_name = "Levitate"
loop_mode = 2
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animations/AnimatedNodeUp:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -4)]
}

[sub_resource type="Animation" id="Animation_4whhn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Animations/AnimatedNodeUp:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Animations/AnimatedNodeUp:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Animations/AnimatedNodeDown:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6mkkk"]
_data = {
&"Death": SubResource("Animation_j558x"),
&"Levitate": SubResource("Animation_0gmt2"),
&"RESET": SubResource("Animation_4whhn")
}

[node name="Enemigo_Lunechon" type="CharacterBody2D" groups=["Enemigo"]]
collision_mask = 2147483649
script = ExtResource("1_sku32")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 14)
shape = SubResource("CapsuleShape2D_p4kmm")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 14)
shape = SubResource("CapsuleShape2D_usiae")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, 24)

[node name="Animations" type="Node2D" parent="."]

[node name="AnimatedNodeUp" type="Node2D" parent="Animations"]
rotation = 1.5708

[node name="AnimatedSpriteUp" type="AnimatedSprite2D" parent="Animations/AnimatedNodeUp"]
position = Vector2(1, -3.61999e-06)
rotation = -1.5708
sprite_frames = SubResource("SpriteFrames_76546")
animation = &"Run"

[node name="AnimatedNodeDown" type="Node2D" parent="Animations"]

[node name="AnimatedSpriteDown" type="AnimatedSprite2D" parent="Animations/AnimatedNodeDown"]
z_index = -1
position = Vector2(0, 32)
sprite_frames = SubResource("SpriteFrames_wjbk8")
animation = &"Run"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animations"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_6mkkk")
}
autoplay = "Levitate"

[node name="NodeRayCastEntorno" type="Node2D" parent="."]

[node name="RayCastSuelo" type="RayCast2D" parent="NodeRayCastEntorno"]
position = Vector2(14, 13)
target_position = Vector2(0, 39.5)

[node name="RayCastPared" type="RayCast2D" parent="NodeRayCastEntorno"]
position = Vector2(0, 22)
target_position = Vector2(20.5, 0)

[node name="State_Machine" parent="." node_paths=PackedStringArray("default_state") instance=ExtResource("7_ikxw4")]
default_state = NodePath("Idle")

[node name="EnemigoLunechonBaseState" type="Node" parent="State_Machine"]
script = ExtResource("7_j558x")

[node name="Idle" type="Node" parent="State_Machine"]
script = ExtResource("4_hvnms")

[node name="Walk" type="Node" parent="State_Machine"]
script = ExtResource("5_tnmmy")

[node name="Damage" type="Node" parent="State_Machine"]
script = ExtResource("7_lkxyf")

[connection signal="area_entered" from="Area2D" to="State_Machine/EnemigoLunechonBaseState" method="_on_area_2d_area_entered"]
[connection signal="animation_finished" from="Animations/AnimatedNodeUp/AnimatedSpriteUp" to="State_Machine/Damage" method="_on_animated_sprite_up_animation_finished"]
[connection signal="animation_finished" from="Animations/AnimationPlayer" to="State_Machine/Damage" method="_on_animation_player_animation_finished"]
